--- a/NATURE_GIFT/index.html
+++ b/NATURE_GIFT/index.html
@@ -26,22 +26,23 @@
         </div>
         <nav class="main-menu">
             <ul class="menu-list">
-                <li class="nav__link nav-ac"><a href="index.html"></a><i class="ri-home-4-line"></i>HOME</li>
+                <li class="nav__link nav-ac"><a href="index.html"><i class="ri-home-4-line"></i>HOME</a></li>
                 <li class="nav__link dropdown">
-                <a href="#"><i class="ri-leaf-line"></i>CHỦ ĐỀ <i class="ri-arrow-down-s-line dropdown-icon"></i></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Sinh nhật</a></li>
-                    <li><a href="#">Kỷ niệm</a></li>
-                    <li><a href="#">Tốt nghiệp</a></li>
-                    <li><a href="#">Tình yêu</a></li>
-                    <li><a href="#">Cảm ơn</a></li>
-                </ul>
-            </li>
-                <li class="nav__link"><a href="#"></a><i class="ri-group-line"></i>ĐỐI TƯỢNG</li>
-                <li class="nav__link"><a href="#"></a><i class="ri-palette-line"></i>KIỂU DÁNG</li>
-                <li class="nav__link"><a href="#"></a><i class="ri-gift-line"></i>QUÀ TẶNG KÈM</li>
-                <li class="nav__link"><a href="#"></a><i class="ri-heart-line"></i>Ý NGHĨA</li>
+                    <a href="#"><i class="ri-leaf-line"></i>CHỦ ĐỀ <i class="ri-arrow-down-s-line dropdown-icon"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Sinh nhật</a></li>
+                        <li><a href="#">Kỷ niệm</a></li>
+                        <li><a href="#">Tốt nghiệp</a></li>
+                        <li><a href="#">Tình yêu</a></li>
+                        <li><a href="#">Cảm ơn</a></li>
+                    </ul>
+                </li>
+                <li class="nav__link"><a href="#"><i class="ri-group-line"></i>ĐỐI TƯỢNG</a></li>
+                <li class="nav__link"><a href="#"><i class="ri-palette-line"></i>KIỂU DÁNG</a></li>
+                <li class="nav__link"><a href="#"><i class="ri-gift-line"></i>QUÀ TẶNG KÈM</a></li>
+                <li class="nav__link"><a href="#"><i class="ri-heart-line"></i>Ý NGHĨA</a></li>
             </ul>
+
             <!-- <div class="nav__toggle" id="nav_toggle">
                 <i class="ri-menu-line nav_burger"></i>
                 <i class="ri-close-line nav_close"></i>
