--- a/NATURE_GIFT/index.html
+++ b/NATURE_GIFT/index.html
@@ -41,6 +41,11 @@
                 <li class="nav__link"><a href="#"><i class="ri-palette-line"></i>KIỂU DÁNG</a></li>
                 <li class="nav__link"><a href="#"><i class="ri-gift-line"></i>QUÀ TẶNG KÈM</a></li>
                 <li class="nav__link"><a href="#"><i class="ri-heart-line"></i>Ý NGHĨA</a></li>
+                <!-- Thanh tìm kiếm được thêm vào đây -->
+                <li class="search">
+                    <input type="text" placeholder="Tìm kiếm quà tặng..." aria-label="Nhập từ khóa tìm kiếm">
+                    <button type="submit" aria-label="Tìm kiếm">🔍</button>
+                </li>
             </ul>
 
             <!-- <div class="nav__toggle" id="nav_toggle">
@@ -49,6 +54,10 @@
             </div> -->
         </nav>
     </header>
+    <div 
+        class="search-results" id="search-results" style="display: none;">
+    </div>
+
 
     <!-- <nav class="main-menu">
         <ul class="menu-list">
