--- a/NATURE_GIFT/index.html
+++ b/NATURE_GIFT/index.html
@@ -30,17 +30,46 @@
                 <li class="nav__link dropdown">
                     <a href="#"><i class="ri-leaf-line"></i>CHỦ ĐỀ <i class="ri-arrow-down-s-line dropdown-icon"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Sinh nhật</a></li>
+                        <li><a href="#" >Sinh nhật</a></li>
                         <li><a href="#">Kỷ niệm</a></li>
                         <li><a href="#">Tốt nghiệp</a></li>
                         <li><a href="#">Tình yêu</a></li>
                         <li><a href="#">Cảm ơn</a></li>
                     </ul>
                 </li>
-                <li class="nav__link"><a href="#"><i class="ri-group-line"></i>ĐỐI TƯỢNG</a></li>
-                <li class="nav__link"><a href="#"><i class="ri-palette-line"></i>KIỂU DÁNG</a></li>
-                <li class="nav__link"><a href="#"><i class="ri-gift-line"></i>QUÀ TẶNG KÈM</a></li>
-                <li class="nav__link"><a href="#"><i class="ri-heart-line"></i>Ý NGHĨA</a></li>
+                <li class="nav__link dropdown">
+                    <a href="#"><i class="ri-group-line"></i>ĐỐI TƯỢNG<i class="ri-arrow-down-s-line dropdown-icon"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Hoa tặng người yêu</a></li>
+                        <li><a href="#">Hoa tặng bạn bè</a></li>
+                        <li><a href="#">Hoa tặng sếp</a></li>
+                        <li><a href="#">Hoa tặng đồng nghiệp</a></li>
+                        <li><a href="#">Hoa tặng người thân</a></li>
+                    </ul>
+                </li>
+                <li class="nav__link dropdown">
+                    <a href="#"><i class="ri-palette-line"></i>KIỂU DÁNG<i class="ri-arrow-down-s-line dropdown-icon"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Bó hoa tươi</a></li>
+                        <li><a href="#">Giỏ hoa tươi</a></li>
+                        <li><a href="#">Bình hoa tươi</a></li>
+                        <li><a href="#">Hộp hoa tươi</a></li>
+                        <li><a href="#">Hộp Mica</a></li>
+                    </ul>
+                </li>
+                <li class="nav__link dropdown">
+                    <a href="#"><i class="ri-gift-line"></i>QUÀ TẶNG KÈM<i class="ri-arrow-down-s-line dropdown-icon"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Chocolate</a></li>
+                        <li><a href="#">Gấu bông</a></li>
+                        <li><a href="#">Trái cây</a></li>
+                        <li><a href="#">Nến thơm</a></li>
+                        <li><a href="#">Bánh kem Brodard</a></li>
+                    </ul>
+                </li>
+                <li class="nav__link">
+                    <a href="#"><i class="ri-heart-line"></i>Ý NGHĨA</a>                    
+                </li>
                 <!-- Thanh tìm kiếm được thêm vào đây -->
                 <li class="search">
                     <input type="text" placeholder="Tìm kiếm quà tặng..." aria-label="Nhập từ khóa tìm kiếm">
