--- a/NATURE_GIFT/index.html
+++ b/NATURE_GIFT/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Nunito:wght@400;600&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/logo_green_icon.ico" type="image/x-icon">
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -19,7 +16,7 @@
                 <div class="left-branch"></div>
                 <div class="right-branch"></div>
                 <div class="logo-wrapper">
-                    <img src="images/logo1.png" alt="Nature Gifting Logo" class="logo-img">
+                    <img src="images/logo.png" alt="Nature Gifting Logo" class="logo-img">
                     <h1>NATURE GIFT</h1>
                 </div>
             </div>
@@ -30,7 +27,7 @@
                 <li class="nav__link dropdown">
                     <a href="#"><i class="ri-leaf-line"></i>CHỦ ĐỀ <i class="ri-arrow-down-s-line dropdown-icon"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#" >Sinh nhật</a></li>
+                        <li><a href="#">Sinh nhật</a></li>
                         <li><a href="#">Kỷ niệm</a></li>
                         <li><a href="#">Tốt nghiệp</a></li>
                         <li><a href="#">Tình yêu</a></li>
@@ -57,35 +54,27 @@
                         <li><a href="#">Hộp Mica</a></li>
                     </ul>
                 </li>
+
+                <!-- ĐÃ CHÈN LẠI PHẦN QUÀ TẶNG KÈM -->
                 <li class="nav__link dropdown">
                     <a href="#"><i class="ri-gift-line"></i>QUÀ TẶNG KÈM<i class="ri-arrow-down-s-line dropdown-icon"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Chocolate</a></li>
-                        <li><a href="#">Gấu bông</a></li>
-                        <li><a href="#">Trái cây</a></li>
-                        <li><a href="#">Nến thơm</a></li>
-                        <li><a href="#">Bánh kem Brodard</a></li>
+                        <li><a href="quantangmoi/trangchu.html">Quà tặng kèm </a></li>
+
                     </ul>
                 </li>
+
                 <li class="nav__link">
-                    <a href="#"><i class="ri-heart-line"></i>Ý NGHĨA</a>                    
+                    <a href="#"><i class="ri-heart-line"></i>Ý NGHĨA</a>
                 </li>
-                <!-- Thanh tìm kiếm được thêm vào đây -->
                 <li class="search">
                     <input type="text" placeholder="Tìm kiếm quà tặng..." aria-label="Nhập từ khóa tìm kiếm">
                     <button type="submit" aria-label="Tìm kiếm">🔍</button>
                 </li>
             </ul>
-
-            <!-- <div class="nav__toggle" id="nav_toggle">
-                <i class="ri-menu-line nav_burger"></i>
-                <i class="ri-close-line nav_close"></i>
-            </div> -->
         </nav>
     </header>
-    <div 
-        class="search-results" id="search-results" style="display: none;">
-    </div>
+    <div class="search-results" id="search-results" style="display: none;"></div>
     <script src="js/index.js"></script>
 </body>
 </html>
