--- a/NATURE_GIFT/index.html
+++ b/NATURE_GIFT/index.html
@@ -11,6 +11,7 @@
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
 />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -58,14 +59,7 @@
                     </ul>
                 </li>
                 <li class="nav__link dropdown">
-                    <a href="#"><i class="ri-gift-line"></i>QUÀ TẶNG KÈM<i class="ri-arrow-down-s-line dropdown-icon"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Chocolate</a></li>
-                        <li><a href="#">Gấu bông</a></li>
-                        <li><a href="#">Trái cây</a></li>
-                        <li><a href="#">Nến thơm</a></li>
-                        <li><a href="#">Bánh kem Brodard</a></li>
-                    </ul>
+                    <a href="Qua_tang_kem.html"><i class="ri-gift-line"></i>QUÀ TẶNG KÈM<i class="ri-arrow-down-s-line dropdown-icon"></i></a>
                 </li>
                 <li class="nav__link">
                     <a href="#"><i class="ri-heart-line"></i>Ý NGHĨA</a>                    
@@ -81,11 +75,38 @@
                 <i class="ri-menu-line nav_burger"></i>
                 <i class="ri-close-line nav_close"></i>
             </div> -->
+            
         </nav>
     </header>
     <div 
         class="search-results" id="search-results" style="display: none;">
     </div>
+    <div class="slide">
+        <div class="slide-container">
+            <img src="images/434445_only-rose.jpg" alt="Only Rose">
+            <img src="images/anh_1.jpg" alt="Dòng Hành">
+            <img src="images/434408_giao-hang-nhanh-60p.jpg" alt="Giao hàng nhanh">
+        </div>
+        <div class="slide-nav">
+            <button class="slide-prev"><i class="ri-arrow-left-s-line"></i></button>
+            <button class="slide-next"><i class="ri-arrow-right-s-line"></i></button>
+        </div>
+        <div class="slide-dots">
+            <div class="slide-dot active"></div>
+            <div class="slide-dot"></div>
+            <div class="slide-dot"></div>
+        </div>
+    </div>
+    <div class="noi_bat">
+    <h2>Mẫu hoa mới năm 2025</h2>
+    <div class="noi_bat_list">
+            <a href="#" class="noi_bat_item">
+                <img src="images/mau_1.png" alt="Hoa hồng đỏ">
+                <h3>HOA TÌNH YÊU</h3>
+            </a>
+        </div>
+    </div>
     <script src="js/index.js"></script>
+    <script src="js/list_images.js"></script>
 </body>
 </html>
